compose assignment 2: custom build image for Drupal

--- a/compose-assignment-2/docker-compose.yml
+++ b/compose-assignment-2/docker-compose.yml
@@ -1,1 +1,27 @@
 # create your drupal and postgres config here, based off the last assignment
+version: '2'
+
+services:
+  drupal:
+    image: custom-drupal
+    build: .
+    volumes:
+      - drupal-modules:/var/www/html/modules:rw
+      - drupal-profiles:/var/www/html/profiles:rw
+      - drupal-sites:/var/www/html/sites:rw
+      - drupal-themes:/var/www/html/themes:rw
+    ports:
+      - '8080:80'
+  postgres:
+    image: postgres:9.6
+    volumes:
+      - drupal-data:/var/lib/postgresql/data
+    environment: 
+      - POSTGRES_PASSWORD=12345678
+volumes:
+    drupal-modules:
+    drupal-profiles:
+    drupal-sites:
+    drupal-themes:
+    drupal-data:
+    
